# BundleBouncer

./: .buildcfg.yml  .gitignore  .gitmodules  AssemblyInfo.cs  BundleBouncer.cs  BundleBouncer.csproj  BundleBouncer.sln  CHANGES.dnYARA.md  CHANGES.md  LICENSE  Logging.cs  Patches.cs  README.md  build.bat  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
BundleBouncer/: AssemblyInfo.cs  AssetBundleInterceptor.cs  AvatarInfo.cs  BundleBouncer.cs  BundleBouncer.csproj  BundleBouncer.csproj.in  Config.cs  Constants.cs  InterceptingAssetBundleDownloadHandler.cs  InterceptingDownloadHandler.cs  Logging.cs  Patches.cs  PhotonSampler.cs  Serialize.cs  _YARA-Rules-Readme.md
BundleBouncer.Shitlist/: BundleBouncer.Shitlist.csproj  ShitlistProvider.cs
BundleBouncer.Validation/: AssetBundleFile.cs  BlockRow6.cs  BlockTable6.cs  BundleBouncer.Validation.csproj  DirectoryRow6.cs  DirectoryTable6.cs  FormatHeader6.cs  Logging.cs  ValidatingBinaryReader.cs  ValidationConstants.generated.cs
BundleBouncer/Data/: AvatarInfo.cs  AvatarShitList.cs  EAvatarType.cs  IShitListProvider.cs  UserAvatars.cs  UserThingSet.cs
BundleBouncer/Format/: AssetBundleBlockList6.cs  AssetBundleBlockRow6.cs  AssetBundleFile.cs  BlockRow6.cs  BlockTable6.cs  DirectoryRow6.cs  DirectoryTable6.cs  FormatHeader6.cs  (+1 more)
Data/: AvatarShitList.cs  AvatarShitList.cs.in
Utilities/: Extensions.cs  HarmonyUtils.cs  Hash.cs  UI.cs  Xref.cs
devtools/: _common.py  build.py  buildDNYara.py  configure.py
dnYara4Core/: dnYara4Core.csproj
legal/: dnYARA.CHANGES.md  dnYARA.LICENSE.txt
(+25 files in other folders)
