[tool.poetry]
name = "bundlebouncer"
version = "0.0.0"
description = "Buildsystem for BundleBouncer"
authors = ["Scottinator <scgriffin213@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
isort = "^5.10.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
